# cpp-template

./: CMakeLists.txt  Dockerfile  readme.md
.github/workflows/: cmake.yml
include/: lib.hpp
src/: lib.cpp  main.cpp
tests/: test_lib.cpp
