cmake_minimum_required(VERSION 3.22)
PROJECT(dockerized_cpp_code_template)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREAD ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS system thread)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} include)
  LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)

SET(THREADS_PREFER_PTHREAD_FLAG ON)
FIND_PACKAGE(Threads REQUIRED)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(USED_LIBS PRIVATE Threads::Threads ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_REGEX_LIBRARY})

SET(SOURCES 
  src/lib.cpp)

ADD_EXECUTABLE(run_tests tests/test_lib.cpp ${SOURCES})
TARGET_LINK_LIBRARIES(run_tests ${USED_LIBS})

ADD_EXECUTABLE(run_app src/main.cpp ${SOURCES})
TARGET_LINK_LIBRARIES(run_app ${USED_LIBS})

ENABLE_TESTING()
ADD_TEST(LibTests bin/run_tests)